--- a/index.html
+++ b/index.html
@@ -218,8 +218,15 @@ footer{
 
 </section>
 
+<script>
+document.getElementById("btnSorpresa").addEventListener("click", function() {
+    document.getElementById("contenidoSorpresa").style.display = "block";
+    this.style.display = "none";
+});
+</script>
 
 </body>
 </html>
+
 
 
