--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ footer{
         margin-top:60px;
         animation:fadeIn 1.2s ease forwards;">
 
-        <img src="IMG_2214.jpeg" alt="Constelaciones"
+        <img src="constelaciones.jpg" alt="Constelaciones"
              style="width:600px; max-width:90%; border-radius:20px; margin-bottom:30px;">
 
         <p style="line-height:1.8; font-size:1.1rem;">
@@ -227,6 +227,7 @@ document.getElementById("btnSorpresa").addEventListener("click", function() {
 
 </body>
 </html>
+
 
 
 
